--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,17 @@
 
 @font-face {
 	font-family:"Justus-Versalitas";
-	src: url(/fonts/Justus-Versalitas/Justus-Versalitas.ttf) format("truetype");
+	src: url(../fonts/Justus-Versalitas/Justus-Versalitas.ttf) format("truetype");
 }
 
 @font-face {
 	font-family:"NeutraText-LightSCAlt";
-	src: url(/fonts/NeutraText-LightSCAlt/NeutraText-LightSCAlt.otf) format("opentype");
+	src: url(..//fonts/NeutraText-LightSCAlt/NeutraText-LightSCAlt.otf) format("opentype");
 }
 
 @font-face {
 	font-family:"NeutraTextTF-Light";
-	src: url(/fonts/NeutraTextTF-Light/NeutraTextTF-Light.otf) format("opentype");
+	src: url(..//fonts/NeutraTextTF-Light/NeutraTextTF-Light.otf) format("opentype");
 }
 
 .clear:after {
